# CppDesignPatterns

./: README.md
Part1_Creational/Builder/: Intro  Person.cpp  Person.h  PersonAddressBuilder.cpp  PersonAddressBuilder.h  PersonBuilder.cpp  PersonBuilder.h  PersonBuilderBase.cpp  PersonBuilderBase.h
Part1_Creational/Factory/: CMakeLists.txt  Coffee.h  CoffeeFactory.h  DrinkFactory.h  HotDrink.h  HotDrinkFactory.h  Point2D.cpp  Point2D.h  SolidWall.cpp  SolidWall.h  Tea.h  TeaFactory.h  Wall.cpp  Wall.h  WallFactory.cpp  WallFactory.h  main.cpp
Part1_Creational/Prototype/: Address.h  CMakeLists.txt  Contact.h  EmployeeFactory.cpp  EmployeeFactory.h  main.cpp
Part1_Creational/Singleton/: BuildingContext.cpp  BuildingContext.h  CMakeLists.txt  ConfigurableRecordFinder.h  Database.h  DummyDatabase.h  PerThreadSingleton.cpp  PerThreadSingleton.h  SingletonDatabase.h  SingletonRecordFinder.h  main.cpp
